# home-tradeoff

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  TO_ADD.md
backend/: pyproject.toml
backend/app/: __init__.py  db.py  main.py  metrics_catalog.py  resolver.py  seed.py  settings.py
backend/app/api/: geo.py  locations.py  metrics.py  presets.py  schemas.py  scoring.py
backend/app/models/: __init__.py  api_cache.py  location.py  metric.py  metric_value.py  preset.py
backend/app/scoring/: __init__.py  engine.py
backend/app/seed_data/: states.py
backend/app/sources/: __init__.py  airport.py  bls.py  census.py  fbi.py  http_cache.py  static_loader.py
backend/app/sources/static/: README.md  airports_large_hubs.json  county_broadband.json  county_cancer.json  county_climate.json  county_electricity.json  county_elevation.json  county_growth.json  county_housing_appreciation.json  county_obesity.json  county_plant_hardiness.json  county_pm25.json  county_politics.json  county_public_lands.json  (+30 more)
backend/scripts/: fetch_county_appreciation.py  fetch_county_broadband.py  fetch_county_cancer.py  fetch_county_climate.py  fetch_county_electricity.py  fetch_county_elevation.py  fetch_county_growth.py  fetch_county_obesity.py  fetch_county_pm25.py  fetch_county_politics.py  fetch_county_public_lands.py  fetch_county_rpp.py  fetch_county_snowfall.py  fetch_county_summits.py  fetch_county_wind_sun.py  fetch_plant_hardiness.py  load_all.py
backend/tests/: conftest.py  test_census.py  test_http_cache.py  test_resolver.py  test_scoring.py  test_static_loader.py
(+19 files in other folders)
